<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" 
    android:orientation="vertical" >
    
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_gameplay" 
	    android:onClick="viewGameplayInfo" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_units" 
	    android:onClick="viewUnitsInfo" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_buildings" 
	    android:onClick="viewBuildingsInfo" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_levels" 
	    android:onClick="viewLevelsInfo" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_info" 
	    android:onClick="viewInfo" />
	
</LinearLayout>