<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" 
    android:orientation="vertical" >
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_challenge_opponent" 
	    android:onClick="challengeOpponent" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_view_challenges" 
	    android:onClick="viewChallenges" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_view_battle" 
	    android:onClick="viewBattle" />
	
	<Button android:layout_weight="1"
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:text="@string/button_view_levels" 
	    android:onClick="viewLevels" />
	
</LinearLayout>