<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccountScreen" 
    android:orientation="vertical" >
        
	<EditText android:id="@+id/create_username_message"
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:maxLength="12"
		android:hint="@string/username_message" />
	
	<EditText android:id="@+id/create_password_message"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/password_message"
	    android:maxLength="20"
	    android:inputType="textPassword"/>
	
	<EditText android:id="@+id/confirm_password_message"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/confirm_password_message"
	    android:maxLength="20"
	    android:inputType="textPassword"/>
	
	<Button android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/button_create" 
	    android:onClick="createAccount" />
	
</LinearLayout>